// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Border Basic render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c1 {
  display: block;
  font-size: 1.25rem;
  -webkit-letter-spacing: 0.0075em;
  -moz-letter-spacing: 0.0075em;
  -ms-letter-spacing: 0.0075em;
  letter-spacing: 0.0075em;
  line-height: 1.6;
  font-weight: 500;
}

.c2 {
  display: block;
  font-size: 1rem;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  font-weight: 400;
}

.c0 {
  position: relative;
  height: 25rem;
  width: 35rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(0,0%,45%,1);
  border-radius: 0.5rem;
}

<body>
    <div>
      <div
        class="c0"
        role="presentation"
      >
        <h6
          class="c1"
          role="contentinfo"
        >
          Lorem ipsum dolor sit amet consectetur adipisicing elit.
        </h6>
        <p
          class="c2"
          role="contentinfo"
        >
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ea dolore ut omnis dignissimos, quaerat cumque. Temporibus provident natus culpa inventore, eligendi, accusamus neque est commodi suscipit, reprehenderit recusandae a.
        </p>
        <p
          class="c2"
          role="contentinfo"
        >
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ea dolore ut omnis dignissimos, quaerat cumque. Temporibus provident natus culpa inventore,
        </p>
      </div>
    </div>
  </body>,
  "container": .c1 {
  display: block;
  font-size: 1.25rem;
  -webkit-letter-spacing: 0.0075em;
  -moz-letter-spacing: 0.0075em;
  -ms-letter-spacing: 0.0075em;
  letter-spacing: 0.0075em;
  line-height: 1.6;
  font-weight: 500;
}

.c2 {
  display: block;
  font-size: 1rem;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  font-weight: 400;
}

.c0 {
  position: relative;
  height: 25rem;
  width: 35rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(0,0%,45%,1);
  border-radius: 0.5rem;
}

<div>
    <div
      class="c0"
      role="presentation"
    >
      <h6
        class="c1"
        role="contentinfo"
      >
        Lorem ipsum dolor sit amet consectetur adipisicing elit.
      </h6>
      <p
        class="c2"
        role="contentinfo"
      >
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ea dolore ut omnis dignissimos, quaerat cumque. Temporibus provident natus culpa inventore, eligendi, accusamus neque est commodi suscipit, reprehenderit recusandae a.
      </p>
      <p
        class="c2"
        role="contentinfo"
      >
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ea dolore ut omnis dignissimos, quaerat cumque. Temporibus provident natus culpa inventore,
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Border Content positioning 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.2em;
  line-height: 1em;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0.5em 0.8em;
  border-radius: 1.5em;
  color: hsla(0,0%,98%,1);
  background-color: hsla(0,0%,25%,1);
}

.c0 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(0,0%,45%,1);
  border-radius: 0.5rem;
}

.c1 {
  position: absolute;
  padding: 4px;
  background-color: hsla(216,56%,98%,1);
  top: 0;
  left: 0;
  -webkit-transform: translate(50%,calc(-px));
  -ms-transform: translate(50%,calc(-px));
  transform: translate(50%,calc(-px));
}

.c3 {
  position: absolute;
  padding: 4px;
  background-color: hsla(216,56%,98%,1);
  top: 0;
  left: 50%;
  -webkit-transform: translate(-50%,calc(-px));
  -ms-transform: translate(-50%,calc(-px));
  transform: translate(-50%,calc(-px));
}

.c4 {
  position: absolute;
  padding: 4px;
  background-color: hsla(216,56%,98%,1);
  top: 0;
  right: 0;
  -webkit-transform: translate(-50%,calc(-px));
  -ms-transform: translate(-50%,calc(-px));
  transform: translate(-50%,calc(-px));
}

.c5 {
  position: absolute;
  padding: 4px;
  background-color: hsla(216,56%,98%,1);
  right: 0;
  top: 0;
  -webkit-transform: rotate(90deg) translate(50%,calc(-50% - px));
  -ms-transform: rotate(90deg) translate(50%,calc(-50% - px));
  transform: rotate(90deg) translate(50%,calc(-50% - px));
}

.c6 {
  position: absolute;
  padding: 4px;
  background-color: hsla(216,56%,98%,1);
  right: 0;
  top: 50%;
  -webkit-transform: rotate(90deg) translate(-25%,calc(-50% - px));
  -ms-transform: rotate(90deg) translate(-25%,calc(-50% - px));
  transform: rotate(90deg) translate(-25%,calc(-50% - px));
}

.c7 {
  position: absolute;
  padding: 4px;
  background-color: hsla(216,56%,98%,1);
  right: 0;
  bottom: 0;
  -webkit-transform: rotate(90deg) translate(-50%,calc(-50% - px));
  -ms-transform: rotate(90deg) translate(-50%,calc(-50% - px));
  transform: rotate(90deg) translate(-50%,calc(-50% - px));
}

.c8 {
  position: absolute;
  padding: 4px;
  background-color: hsla(216,56%,98%,1);
  right: 0;
  bottom: 0;
  -webkit-transform: translate(-50%,calc(px));
  -ms-transform: translate(-50%,calc(px));
  transform: translate(-50%,calc(px));
}

.c9 {
  position: absolute;
  padding: 4px;
  background-color: hsla(216,56%,98%,1);
  left: 50%;
  bottom: 0;
  -webkit-transform: translate(-50%,calc(px));
  -ms-transform: translate(-50%,calc(px));
  transform: translate(-50%,calc(px));
}

.c10 {
  position: absolute;
  padding: 4px;
  background-color: hsla(216,56%,98%,1);
  left: 0;
  bottom: 0;
  -webkit-transform: translate(50%,calc(px));
  -ms-transform: translate(50%,calc(px));
  transform: translate(50%,calc(px));
}

.c11 {
  position: absolute;
  padding: 4px;
  background-color: hsla(216,56%,98%,1);
  left: 0;
  bottom: 0;
  -webkit-transform: rotate(270deg) translate(50%,calc(-50% - px));
  -ms-transform: rotate(270deg) translate(50%,calc(-50% - px));
  transform: rotate(270deg) translate(50%,calc(-50% - px));
}

.c12 {
  position: absolute;
  padding: 4px;
  background-color: hsla(216,56%,98%,1);
  left: 0;
  top: 50%;
  -webkit-transform: rotate(270deg) translate(25%,calc(-50% - px));
  -ms-transform: rotate(270deg) translate(25%,calc(-50% - px));
  transform: rotate(270deg) translate(25%,calc(-50% - px));
}

.c13 {
  position: absolute;
  padding: 4px;
  background-color: hsla(216,56%,98%,1);
  left: 0;
  top: 0;
  -webkit-transform: rotate(270deg) translate(-50%,calc(-50% - px));
  -ms-transform: rotate(270deg) translate(-50%,calc(-50% - px));
  transform: rotate(270deg) translate(-50%,calc(-50% - px));
}

<body>
    <div>
      <div
        class="c0"
        role="presentation"
      >
        <div
          class="c1"
        >
          <div
            class="c2"
            role="status"
          >
            Border
          </div>
        </div>
        basic
      </div>
      <div
        class="c0"
        role="presentation"
      >
        <div
          class="c3"
        >
          <div
            class="c2"
            role="status"
          >
            Border
          </div>
        </div>
        basic
      </div>
      <div
        class="c0"
        role="presentation"
      >
        <div
          class="c4"
        >
          <div
            class="c2"
            role="status"
          >
            Border
          </div>
        </div>
        basic
      </div>
      <div
        class="c0"
        role="presentation"
      >
        <div
          class="c5"
        >
          <div
            class="c2"
            role="status"
          >
            Border
          </div>
        </div>
        basic
      </div>
      <div
        class="c0"
        role="presentation"
      >
        <div
          class="c6"
        >
          <div
            class="c2"
            role="status"
          >
            Border
          </div>
        </div>
        basic
      </div>
      <div
        class="c0"
        role="presentation"
      >
        <div
          class="c7"
        >
          <div
            class="c2"
            role="status"
          >
            Border
          </div>
        </div>
        basic
      </div>
      <div
        class="c0"
        role="presentation"
      >
        <div
          class="c8"
        >
          <div
            class="c2"
            role="status"
          >
            Border
          </div>
        </div>
        basic
      </div>
      <div
        class="c0"
        role="presentation"
      >
        <div
          class="c9"
        >
          <div
            class="c2"
            role="status"
          >
            Border
          </div>
        </div>
        basic
      </div>
      <div
        class="c0"
        role="presentation"
      >
        <div
          class="c10"
        >
          <div
            class="c2"
            role="status"
          >
            Border
          </div>
        </div>
        basic
      </div>
      <div
        class="c0"
        role="presentation"
      >
        <div
          class="c11"
        >
          <div
            class="c2"
            role="status"
          >
            Border
          </div>
        </div>
        basic
      </div>
      <div
        class="c0"
        role="presentation"
      >
        <div
          class="c12"
        >
          <div
            class="c2"
            role="status"
          >
            Border
          </div>
        </div>
        basic
      </div>
      <div
        class="c0"
        role="presentation"
      >
        <div
          class="c13"
        >
          <div
            class="c2"
            role="status"
          >
            Border
          </div>
        </div>
        basic
      </div>
    </div>
  </body>,
  "container": .c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.2em;
  line-height: 1em;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0.5em 0.8em;
  border-radius: 1.5em;
  color: hsla(0,0%,98%,1);
  background-color: hsla(0,0%,25%,1);
}

.c0 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(0,0%,45%,1);
  border-radius: 0.5rem;
}

.c1 {
  position: absolute;
  padding: 4px;
  background-color: hsla(216,56%,98%,1);
  top: 0;
  left: 0;
  -webkit-transform: translate(50%,calc(-px));
  -ms-transform: translate(50%,calc(-px));
  transform: translate(50%,calc(-px));
}

.c3 {
  position: absolute;
  padding: 4px;
  background-color: hsla(216,56%,98%,1);
  top: 0;
  left: 50%;
  -webkit-transform: translate(-50%,calc(-px));
  -ms-transform: translate(-50%,calc(-px));
  transform: translate(-50%,calc(-px));
}

.c4 {
  position: absolute;
  padding: 4px;
  background-color: hsla(216,56%,98%,1);
  top: 0;
  right: 0;
  -webkit-transform: translate(-50%,calc(-px));
  -ms-transform: translate(-50%,calc(-px));
  transform: translate(-50%,calc(-px));
}

.c5 {
  position: absolute;
  padding: 4px;
  background-color: hsla(216,56%,98%,1);
  right: 0;
  top: 0;
  -webkit-transform: rotate(90deg) translate(50%,calc(-50% - px));
  -ms-transform: rotate(90deg) translate(50%,calc(-50% - px));
  transform: rotate(90deg) translate(50%,calc(-50% - px));
}

.c6 {
  position: absolute;
  padding: 4px;
  background-color: hsla(216,56%,98%,1);
  right: 0;
  top: 50%;
  -webkit-transform: rotate(90deg) translate(-25%,calc(-50% - px));
  -ms-transform: rotate(90deg) translate(-25%,calc(-50% - px));
  transform: rotate(90deg) translate(-25%,calc(-50% - px));
}

.c7 {
  position: absolute;
  padding: 4px;
  background-color: hsla(216,56%,98%,1);
  right: 0;
  bottom: 0;
  -webkit-transform: rotate(90deg) translate(-50%,calc(-50% - px));
  -ms-transform: rotate(90deg) translate(-50%,calc(-50% - px));
  transform: rotate(90deg) translate(-50%,calc(-50% - px));
}

.c8 {
  position: absolute;
  padding: 4px;
  background-color: hsla(216,56%,98%,1);
  right: 0;
  bottom: 0;
  -webkit-transform: translate(-50%,calc(px));
  -ms-transform: translate(-50%,calc(px));
  transform: translate(-50%,calc(px));
}

.c9 {
  position: absolute;
  padding: 4px;
  background-color: hsla(216,56%,98%,1);
  left: 50%;
  bottom: 0;
  -webkit-transform: translate(-50%,calc(px));
  -ms-transform: translate(-50%,calc(px));
  transform: translate(-50%,calc(px));
}

.c10 {
  position: absolute;
  padding: 4px;
  background-color: hsla(216,56%,98%,1);
  left: 0;
  bottom: 0;
  -webkit-transform: translate(50%,calc(px));
  -ms-transform: translate(50%,calc(px));
  transform: translate(50%,calc(px));
}

.c11 {
  position: absolute;
  padding: 4px;
  background-color: hsla(216,56%,98%,1);
  left: 0;
  bottom: 0;
  -webkit-transform: rotate(270deg) translate(50%,calc(-50% - px));
  -ms-transform: rotate(270deg) translate(50%,calc(-50% - px));
  transform: rotate(270deg) translate(50%,calc(-50% - px));
}

.c12 {
  position: absolute;
  padding: 4px;
  background-color: hsla(216,56%,98%,1);
  left: 0;
  top: 50%;
  -webkit-transform: rotate(270deg) translate(25%,calc(-50% - px));
  -ms-transform: rotate(270deg) translate(25%,calc(-50% - px));
  transform: rotate(270deg) translate(25%,calc(-50% - px));
}

.c13 {
  position: absolute;
  padding: 4px;
  background-color: hsla(216,56%,98%,1);
  left: 0;
  top: 0;
  -webkit-transform: rotate(270deg) translate(-50%,calc(-50% - px));
  -ms-transform: rotate(270deg) translate(-50%,calc(-50% - px));
  transform: rotate(270deg) translate(-50%,calc(-50% - px));
}

<div>
    <div
      class="c0"
      role="presentation"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
          role="status"
        >
          Border
        </div>
      </div>
      basic
    </div>
    <div
      class="c0"
      role="presentation"
    >
      <div
        class="c3"
      >
        <div
          class="c2"
          role="status"
        >
          Border
        </div>
      </div>
      basic
    </div>
    <div
      class="c0"
      role="presentation"
    >
      <div
        class="c4"
      >
        <div
          class="c2"
          role="status"
        >
          Border
        </div>
      </div>
      basic
    </div>
    <div
      class="c0"
      role="presentation"
    >
      <div
        class="c5"
      >
        <div
          class="c2"
          role="status"
        >
          Border
        </div>
      </div>
      basic
    </div>
    <div
      class="c0"
      role="presentation"
    >
      <div
        class="c6"
      >
        <div
          class="c2"
          role="status"
        >
          Border
        </div>
      </div>
      basic
    </div>
    <div
      class="c0"
      role="presentation"
    >
      <div
        class="c7"
      >
        <div
          class="c2"
          role="status"
        >
          Border
        </div>
      </div>
      basic
    </div>
    <div
      class="c0"
      role="presentation"
    >
      <div
        class="c8"
      >
        <div
          class="c2"
          role="status"
        >
          Border
        </div>
      </div>
      basic
    </div>
    <div
      class="c0"
      role="presentation"
    >
      <div
        class="c9"
      >
        <div
          class="c2"
          role="status"
        >
          Border
        </div>
      </div>
      basic
    </div>
    <div
      class="c0"
      role="presentation"
    >
      <div
        class="c10"
      >
        <div
          class="c2"
          role="status"
        >
          Border
        </div>
      </div>
      basic
    </div>
    <div
      class="c0"
      role="presentation"
    >
      <div
        class="c11"
      >
        <div
          class="c2"
          role="status"
        >
          Border
        </div>
      </div>
      basic
    </div>
    <div
      class="c0"
      role="presentation"
    >
      <div
        class="c12"
      >
        <div
          class="c2"
          role="status"
        >
          Border
        </div>
      </div>
      basic
    </div>
    <div
      class="c0"
      role="presentation"
    >
      <div
        class="c13"
      >
        <div
          class="c2"
          role="status"
        >
          Border
        </div>
      </div>
      basic
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Border Dark mode basic render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c1 {
  display: block;
  font-size: 1.25rem;
  -webkit-letter-spacing: 0.0075em;
  -moz-letter-spacing: 0.0075em;
  -ms-letter-spacing: 0.0075em;
  letter-spacing: 0.0075em;
  line-height: 1.6;
  font-weight: 500;
}

.c2 {
  display: block;
  font-size: 1rem;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  font-weight: 400;
}

.c0 {
  position: relative;
  height: 25rem;
  width: 35rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(0,0%,45%,1);
  border-radius: 0.5rem;
}

<body>
    <div>
      <div
        class="c0"
        role="presentation"
      >
        <h6
          class="c1"
          role="contentinfo"
        >
          Lorem ipsum dolor sit amet consectetur adipisicing elit.
        </h6>
        <p
          class="c2"
          role="contentinfo"
        >
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ea dolore ut omnis dignissimos, quaerat cumque. Temporibus provident natus culpa inventore, eligendi, accusamus neque est commodi suscipit, reprehenderit recusandae a.
        </p>
        <p
          class="c2"
          role="contentinfo"
        >
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ea dolore ut omnis dignissimos, quaerat cumque. Temporibus provident natus culpa inventore,
        </p>
      </div>
    </div>
  </body>,
  "container": .c1 {
  display: block;
  font-size: 1.25rem;
  -webkit-letter-spacing: 0.0075em;
  -moz-letter-spacing: 0.0075em;
  -ms-letter-spacing: 0.0075em;
  letter-spacing: 0.0075em;
  line-height: 1.6;
  font-weight: 500;
}

.c2 {
  display: block;
  font-size: 1rem;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  font-weight: 400;
}

.c0 {
  position: relative;
  height: 25rem;
  width: 35rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(0,0%,45%,1);
  border-radius: 0.5rem;
}

<div>
    <div
      class="c0"
      role="presentation"
    >
      <h6
        class="c1"
        role="contentinfo"
      >
        Lorem ipsum dolor sit amet consectetur adipisicing elit.
      </h6>
      <p
        class="c2"
        role="contentinfo"
      >
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ea dolore ut omnis dignissimos, quaerat cumque. Temporibus provident natus culpa inventore, eligendi, accusamus neque est commodi suscipit, reprehenderit recusandae a.
      </p>
      <p
        class="c2"
        role="contentinfo"
      >
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ea dolore ut omnis dignissimos, quaerat cumque. Temporibus provident natus culpa inventore,
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Border Density 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c1 {
  display: block;
  font-size: 1.25rem;
  -webkit-letter-spacing: 0.0075em;
  -moz-letter-spacing: 0.0075em;
  -ms-letter-spacing: 0.0075em;
  letter-spacing: 0.0075em;
  line-height: 1.6;
  font-weight: 500;
}

.c2 {
  display: block;
  font-size: 1rem;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  font-weight: 400;
}

.c0 {
  position: relative;
  height: 25rem;
  width: 35rem;
  padding: 1rem;
  border-style: solid;
  border-width: 8px;
  border-color: hsla(0,0%,45%,1);
  border-radius: 0.5rem;
}

<body>
    <div>
      <div
        class="c0"
        role="presentation"
      >
        <h6
          class="c1"
          role="contentinfo"
        >
          density 8px
        </h6>
        <p
          class="c2"
          role="contentinfo"
        >
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ea dolore ut omnis dignissimos, quaerat cumque. Temporibus provident natus culpa inventore, eligendi, accusamus neque est commodi suscipit, reprehenderit recusandae a.
        </p>
        <p
          class="c2"
          role="contentinfo"
        >
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ea dolore ut omnis dignissimos, quaerat cumque. Temporibus provident natus culpa inventore,
        </p>
      </div>
    </div>
  </body>,
  "container": .c1 {
  display: block;
  font-size: 1.25rem;
  -webkit-letter-spacing: 0.0075em;
  -moz-letter-spacing: 0.0075em;
  -ms-letter-spacing: 0.0075em;
  letter-spacing: 0.0075em;
  line-height: 1.6;
  font-weight: 500;
}

.c2 {
  display: block;
  font-size: 1rem;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  font-weight: 400;
}

.c0 {
  position: relative;
  height: 25rem;
  width: 35rem;
  padding: 1rem;
  border-style: solid;
  border-width: 8px;
  border-color: hsla(0,0%,45%,1);
  border-radius: 0.5rem;
}

<div>
    <div
      class="c0"
      role="presentation"
    >
      <h6
        class="c1"
        role="contentinfo"
      >
        density 8px
      </h6>
      <p
        class="c2"
        role="contentinfo"
      >
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ea dolore ut omnis dignissimos, quaerat cumque. Temporibus provident natus culpa inventore, eligendi, accusamus neque est commodi suscipit, reprehenderit recusandae a.
      </p>
      <p
        class="c2"
        role="contentinfo"
      >
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ea dolore ut omnis dignissimos, quaerat cumque. Temporibus provident natus culpa inventore,
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Border Margin 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c1 {
  display: block;
  font-size: 1.25rem;
  -webkit-letter-spacing: 0.0075em;
  -moz-letter-spacing: 0.0075em;
  -ms-letter-spacing: 0.0075em;
  letter-spacing: 0.0075em;
  line-height: 1.6;
  font-weight: 500;
}

.c2 {
  display: block;
  font-size: 1rem;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  font-weight: 400;
}

.c0 {
  position: relative;
  height: 25rem;
  width: 35rem;
  padding: 1rem;
  margin: 3rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(0,0%,45%,1);
  border-radius: 0.5rem;
}

<body>
    <div>
      <div
        class="c0"
        role="presentation"
      >
        <h6
          class="c1"
          role="contentinfo"
        >
          margin 3rem & padding 1rem
        </h6>
        <p
          class="c2"
          role="contentinfo"
        >
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ea dolore ut omnis dignissimos, quaerat cumque. Temporibus provident natus culpa inventore, eligendi, accusamus neque est commodi suscipit, reprehenderit recusandae a.
        </p>
        <p
          class="c2"
          role="contentinfo"
        >
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ea dolore ut omnis dignissimos, quaerat cumque. Temporibus provident natus culpa inventore,
        </p>
      </div>
    </div>
  </body>,
  "container": .c1 {
  display: block;
  font-size: 1.25rem;
  -webkit-letter-spacing: 0.0075em;
  -moz-letter-spacing: 0.0075em;
  -ms-letter-spacing: 0.0075em;
  letter-spacing: 0.0075em;
  line-height: 1.6;
  font-weight: 500;
}

.c2 {
  display: block;
  font-size: 1rem;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  font-weight: 400;
}

.c0 {
  position: relative;
  height: 25rem;
  width: 35rem;
  padding: 1rem;
  margin: 3rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(0,0%,45%,1);
  border-radius: 0.5rem;
}

<div>
    <div
      class="c0"
      role="presentation"
    >
      <h6
        class="c1"
        role="contentinfo"
      >
        margin 3rem & padding 1rem
      </h6>
      <p
        class="c2"
        role="contentinfo"
      >
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ea dolore ut omnis dignissimos, quaerat cumque. Temporibus provident natus culpa inventore, eligendi, accusamus neque est commodi suscipit, reprehenderit recusandae a.
      </p>
      <p
        class="c2"
        role="contentinfo"
      >
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ea dolore ut omnis dignissimos, quaerat cumque. Temporibus provident natus culpa inventore,
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Border Padding 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c1 {
  display: block;
  font-size: 1.25rem;
  -webkit-letter-spacing: 0.0075em;
  -moz-letter-spacing: 0.0075em;
  -ms-letter-spacing: 0.0075em;
  letter-spacing: 0.0075em;
  line-height: 1.6;
  font-weight: 500;
}

.c2 {
  display: block;
  font-size: 1rem;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  font-weight: 400;
}

.c0 {
  position: relative;
  height: 25rem;
  width: 35rem;
  padding: 3rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(0,0%,45%,1);
  border-radius: 0.5rem;
}

<body>
    <div>
      <div
        class="c0"
        role="presentation"
      >
        <h6
          class="c1"
          role="contentinfo"
        >
          padding 3rem
        </h6>
        <p
          class="c2"
          role="contentinfo"
        >
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ea dolore ut omnis dignissimos, quaerat cumque. Temporibus provident natus culpa inventore, eligendi, accusamus neque est commodi suscipit, reprehenderit recusandae a.
        </p>
        <p
          class="c2"
          role="contentinfo"
        >
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ea dolore ut omnis dignissimos, quaerat cumque. Temporibus provident natus culpa inventore,
        </p>
      </div>
    </div>
  </body>,
  "container": .c1 {
  display: block;
  font-size: 1.25rem;
  -webkit-letter-spacing: 0.0075em;
  -moz-letter-spacing: 0.0075em;
  -ms-letter-spacing: 0.0075em;
  letter-spacing: 0.0075em;
  line-height: 1.6;
  font-weight: 500;
}

.c2 {
  display: block;
  font-size: 1rem;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  font-weight: 400;
}

.c0 {
  position: relative;
  height: 25rem;
  width: 35rem;
  padding: 3rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(0,0%,45%,1);
  border-radius: 0.5rem;
}

<div>
    <div
      class="c0"
      role="presentation"
    >
      <h6
        class="c1"
        role="contentinfo"
      >
        padding 3rem
      </h6>
      <p
        class="c2"
        role="contentinfo"
      >
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ea dolore ut omnis dignissimos, quaerat cumque. Temporibus provident natus culpa inventore, eligendi, accusamus neque est commodi suscipit, reprehenderit recusandae a.
      </p>
      <p
        class="c2"
        role="contentinfo"
      >
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ea dolore ut omnis dignissimos, quaerat cumque. Temporibus provident natus culpa inventore,
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Border Shades 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.2em;
  line-height: 1em;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0.5em 0.8em;
  border-radius: 1.5em;
  color: hsla(0,0%,98%,1);
  background-color: hsla(0,0%,25%,1);
}

.c0 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(0,0%,98%,1);
  border-radius: 0.5rem;
}

.c3 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(0,0%,96%,1);
  border-radius: 0.5rem;
}

.c4 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(0,0%,90%,1);
  border-radius: 0.5rem;
}

.c5 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(0,0%,83%,1);
  border-radius: 0.5rem;
}

.c6 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(0,0%,64%,1);
  border-radius: 0.5rem;
}

.c7 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(0,0%,45%,1);
  border-radius: 0.5rem;
}

.c8 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(0,0%,32%,1);
  border-radius: 0.5rem;
}

.c9 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(0,0%,25%,1);
  border-radius: 0.5rem;
}

.c10 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(0,0%,15%,1);
  border-radius: 0.5rem;
}

.c11 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(0,0%,9%,1);
  border-radius: 0.5rem;
}

.c1 {
  position: absolute;
  padding: 4px;
  background-color: hsla(216,56%,98%,1);
  top: 0;
  left: 0;
  -webkit-transform: translate(50%,calc(-px));
  -ms-transform: translate(50%,calc(-px));
  transform: translate(50%,calc(-px));
}

<body>
    <div>
      <div
        class="c0"
        role="presentation"
      >
        <div
          class="c1"
        >
          <div
            class="c2"
            role="status"
          >
            Border
          </div>
        </div>
        basic
      </div>
      <div
        class="c3"
        role="presentation"
      >
        <div
          class="c1"
        >
          <div
            class="c2"
            role="status"
          >
            Border
          </div>
        </div>
        basic
      </div>
      <div
        class="c4"
        role="presentation"
      >
        <div
          class="c1"
        >
          <div
            class="c2"
            role="status"
          >
            Border
          </div>
        </div>
        basic
      </div>
      <div
        class="c5"
        role="presentation"
      >
        <div
          class="c1"
        >
          <div
            class="c2"
            role="status"
          >
            Border
          </div>
        </div>
        basic
      </div>
      <div
        class="c6"
        role="presentation"
      >
        <div
          class="c1"
        >
          <div
            class="c2"
            role="status"
          >
            Border
          </div>
        </div>
        basic
      </div>
      <div
        class="c7"
        role="presentation"
      >
        <div
          class="c1"
        >
          <div
            class="c2"
            role="status"
          >
            Border
          </div>
        </div>
        basic
      </div>
      <div
        class="c8"
        role="presentation"
      >
        <div
          class="c1"
        >
          <div
            class="c2"
            role="status"
          >
            Border
          </div>
        </div>
        basic
      </div>
      <div
        class="c9"
        role="presentation"
      >
        <div
          class="c1"
        >
          <div
            class="c2"
            role="status"
          >
            Border
          </div>
        </div>
        basic
      </div>
      <div
        class="c10"
        role="presentation"
      >
        <div
          class="c1"
        >
          <div
            class="c2"
            role="status"
          >
            Border
          </div>
        </div>
        basic
      </div>
      <div
        class="c11"
        role="presentation"
      >
        <div
          class="c1"
        >
          <div
            class="c2"
            role="status"
          >
            Border
          </div>
        </div>
        basic
      </div>
    </div>
  </body>,
  "container": .c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.2em;
  line-height: 1em;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0.5em 0.8em;
  border-radius: 1.5em;
  color: hsla(0,0%,98%,1);
  background-color: hsla(0,0%,25%,1);
}

.c0 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(0,0%,98%,1);
  border-radius: 0.5rem;
}

.c3 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(0,0%,96%,1);
  border-radius: 0.5rem;
}

.c4 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(0,0%,90%,1);
  border-radius: 0.5rem;
}

.c5 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(0,0%,83%,1);
  border-radius: 0.5rem;
}

.c6 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(0,0%,64%,1);
  border-radius: 0.5rem;
}

.c7 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(0,0%,45%,1);
  border-radius: 0.5rem;
}

.c8 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(0,0%,32%,1);
  border-radius: 0.5rem;
}

.c9 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(0,0%,25%,1);
  border-radius: 0.5rem;
}

.c10 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(0,0%,15%,1);
  border-radius: 0.5rem;
}

.c11 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(0,0%,9%,1);
  border-radius: 0.5rem;
}

.c1 {
  position: absolute;
  padding: 4px;
  background-color: hsla(216,56%,98%,1);
  top: 0;
  left: 0;
  -webkit-transform: translate(50%,calc(-px));
  -ms-transform: translate(50%,calc(-px));
  transform: translate(50%,calc(-px));
}

<div>
    <div
      class="c0"
      role="presentation"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
          role="status"
        >
          Border
        </div>
      </div>
      basic
    </div>
    <div
      class="c3"
      role="presentation"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
          role="status"
        >
          Border
        </div>
      </div>
      basic
    </div>
    <div
      class="c4"
      role="presentation"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
          role="status"
        >
          Border
        </div>
      </div>
      basic
    </div>
    <div
      class="c5"
      role="presentation"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
          role="status"
        >
          Border
        </div>
      </div>
      basic
    </div>
    <div
      class="c6"
      role="presentation"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
          role="status"
        >
          Border
        </div>
      </div>
      basic
    </div>
    <div
      class="c7"
      role="presentation"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
          role="status"
        >
          Border
        </div>
      </div>
      basic
    </div>
    <div
      class="c8"
      role="presentation"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
          role="status"
        >
          Border
        </div>
      </div>
      basic
    </div>
    <div
      class="c9"
      role="presentation"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
          role="status"
        >
          Border
        </div>
      </div>
      basic
    </div>
    <div
      class="c10"
      role="presentation"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
          role="status"
        >
          Border
        </div>
      </div>
      basic
    </div>
    <div
      class="c11"
      role="presentation"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
          role="status"
        >
          Border
        </div>
      </div>
      basic
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Border Sharp 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c1 {
  display: block;
  font-size: 1.25rem;
  -webkit-letter-spacing: 0.0075em;
  -moz-letter-spacing: 0.0075em;
  -ms-letter-spacing: 0.0075em;
  letter-spacing: 0.0075em;
  line-height: 1.6;
  font-weight: 500;
}

.c2 {
  display: block;
  font-size: 1rem;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  font-weight: 400;
}

.c0 {
  position: relative;
  height: 25rem;
  width: 35rem;
  padding: 1rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(0,0%,45%,1);
  border-radius: 0;
}

<body>
    <div>
      <div
        class="c0"
        role="presentation"
      >
        <h6
          class="c1"
          role="contentinfo"
        >
          sharp corner
        </h6>
        <p
          class="c2"
          role="contentinfo"
        >
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ea dolore ut omnis dignissimos, quaerat cumque. Temporibus provident natus culpa inventore, eligendi, accusamus neque est commodi suscipit, reprehenderit recusandae a.
        </p>
        <p
          class="c2"
          role="contentinfo"
        >
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ea dolore ut omnis dignissimos, quaerat cumque. Temporibus provident natus culpa inventore,
        </p>
      </div>
    </div>
  </body>,
  "container": .c1 {
  display: block;
  font-size: 1.25rem;
  -webkit-letter-spacing: 0.0075em;
  -moz-letter-spacing: 0.0075em;
  -ms-letter-spacing: 0.0075em;
  letter-spacing: 0.0075em;
  line-height: 1.6;
  font-weight: 500;
}

.c2 {
  display: block;
  font-size: 1rem;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
  font-weight: 400;
}

.c0 {
  position: relative;
  height: 25rem;
  width: 35rem;
  padding: 1rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(0,0%,45%,1);
  border-radius: 0;
}

<div>
    <div
      class="c0"
      role="presentation"
    >
      <h6
        class="c1"
        role="contentinfo"
      >
        sharp corner
      </h6>
      <p
        class="c2"
        role="contentinfo"
      >
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ea dolore ut omnis dignissimos, quaerat cumque. Temporibus provident natus culpa inventore, eligendi, accusamus neque est commodi suscipit, reprehenderit recusandae a.
      </p>
      <p
        class="c2"
        role="contentinfo"
      >
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ea dolore ut omnis dignissimos, quaerat cumque. Temporibus provident natus culpa inventore,
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Border Tones 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.2em;
  line-height: 1em;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0.5em 0.8em;
  border-radius: 1.5em;
  color: hsla(270,100%,98%,1);
  background-color: hsla(272,72%,47%,1);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.2em;
  line-height: 1em;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0.5em 0.8em;
  border-radius: 1.5em;
  color: hsla(327,73%,97%,1);
  background-color: hsla(335,78%,42%,1);
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.2em;
  line-height: 1em;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0.5em 0.8em;
  border-radius: 1.5em;
  color: hsla(0,0%,98%,1);
  background-color: hsla(0,0%,25%,1);
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.2em;
  line-height: 1em;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0.5em 0.8em;
  border-radius: 1.5em;
  color: hsla(214,100%,97%,1);
  background-color: hsla(224,76%,48%,1);
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.2em;
  line-height: 1em;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0.5em 0.8em;
  border-radius: 1.5em;
  color: hsla(138,76%,97%,1);
  background-color: hsla(142,72%,29%,1);
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.2em;
  line-height: 1em;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0.5em 0.8em;
  border-radius: 1.5em;
  color: hsla(48,100%,96%,1);
  background-color: hsla(26,90%,37%,1);
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.2em;
  line-height: 1em;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0.5em 0.8em;
  border-radius: 1.5em;
  color: hsla(0,86%,97%,1);
  background-color: hsla(0,74%,42%,1);
}

.c0 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(271,91%,65%,1);
  border-radius: 0.5rem;
}

.c3 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(330,81%,60%,1);
  border-radius: 0.5rem;
}

.c5 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(0,0%,45%,1);
  border-radius: 0.5rem;
}

.c7 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(217,91%,60%,1);
  border-radius: 0.5rem;
}

.c9 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(142,71%,45%,1);
  border-radius: 0.5rem;
}

.c11 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(38,92%,50%,1);
  border-radius: 0.5rem;
}

.c13 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(0,84%,60%,1);
  border-radius: 0.5rem;
}

.c1 {
  position: absolute;
  padding: 4px;
  background-color: hsla(216,56%,98%,1);
  top: 0;
  left: 0;
  -webkit-transform: translate(50%,calc(-px));
  -ms-transform: translate(50%,calc(-px));
  transform: translate(50%,calc(-px));
}

<body>
    <div>
      <div
        class="c0"
        role="presentation"
      >
        <div
          class="c1"
        >
          <div
            class="c2"
            role="status"
          >
            Border
          </div>
        </div>
        basic
      </div>
      <div
        class="c3"
        role="presentation"
      >
        <div
          class="c1"
        >
          <div
            class="c4"
            role="status"
          >
            Border
          </div>
        </div>
        basic
      </div>
      <div
        class="c5"
        role="presentation"
      >
        <div
          class="c1"
        >
          <div
            class="c6"
            role="status"
          >
            Border
          </div>
        </div>
        basic
      </div>
      <div
        class="c7"
        role="presentation"
      >
        <div
          class="c1"
        >
          <div
            class="c8"
            role="status"
          >
            Border
          </div>
        </div>
        basic
      </div>
      <div
        class="c9"
        role="presentation"
      >
        <div
          class="c1"
        >
          <div
            class="c10"
            role="status"
          >
            Border
          </div>
        </div>
        basic
      </div>
      <div
        class="c11"
        role="presentation"
      >
        <div
          class="c1"
        >
          <div
            class="c12"
            role="status"
          >
            Border
          </div>
        </div>
        basic
      </div>
      <div
        class="c13"
        role="presentation"
      >
        <div
          class="c1"
        >
          <div
            class="c14"
            role="status"
          >
            Border
          </div>
        </div>
        basic
      </div>
    </div>
  </body>,
  "container": .c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.2em;
  line-height: 1em;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0.5em 0.8em;
  border-radius: 1.5em;
  color: hsla(270,100%,98%,1);
  background-color: hsla(272,72%,47%,1);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.2em;
  line-height: 1em;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0.5em 0.8em;
  border-radius: 1.5em;
  color: hsla(327,73%,97%,1);
  background-color: hsla(335,78%,42%,1);
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.2em;
  line-height: 1em;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0.5em 0.8em;
  border-radius: 1.5em;
  color: hsla(0,0%,98%,1);
  background-color: hsla(0,0%,25%,1);
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.2em;
  line-height: 1em;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0.5em 0.8em;
  border-radius: 1.5em;
  color: hsla(214,100%,97%,1);
  background-color: hsla(224,76%,48%,1);
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.2em;
  line-height: 1em;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0.5em 0.8em;
  border-radius: 1.5em;
  color: hsla(138,76%,97%,1);
  background-color: hsla(142,72%,29%,1);
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.2em;
  line-height: 1em;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0.5em 0.8em;
  border-radius: 1.5em;
  color: hsla(48,100%,96%,1);
  background-color: hsla(26,90%,37%,1);
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.2em;
  line-height: 1em;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0.5em 0.8em;
  border-radius: 1.5em;
  color: hsla(0,86%,97%,1);
  background-color: hsla(0,74%,42%,1);
}

.c0 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(271,91%,65%,1);
  border-radius: 0.5rem;
}

.c3 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(330,81%,60%,1);
  border-radius: 0.5rem;
}

.c5 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(0,0%,45%,1);
  border-radius: 0.5rem;
}

.c7 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(217,91%,60%,1);
  border-radius: 0.5rem;
}

.c9 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(142,71%,45%,1);
  border-radius: 0.5rem;
}

.c11 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(38,92%,50%,1);
  border-radius: 0.5rem;
}

.c13 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(0,84%,60%,1);
  border-radius: 0.5rem;
}

.c1 {
  position: absolute;
  padding: 4px;
  background-color: hsla(216,56%,98%,1);
  top: 0;
  left: 0;
  -webkit-transform: translate(50%,calc(-px));
  -ms-transform: translate(50%,calc(-px));
  transform: translate(50%,calc(-px));
}

<div>
    <div
      class="c0"
      role="presentation"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
          role="status"
        >
          Border
        </div>
      </div>
      basic
    </div>
    <div
      class="c3"
      role="presentation"
    >
      <div
        class="c1"
      >
        <div
          class="c4"
          role="status"
        >
          Border
        </div>
      </div>
      basic
    </div>
    <div
      class="c5"
      role="presentation"
    >
      <div
        class="c1"
      >
        <div
          class="c6"
          role="status"
        >
          Border
        </div>
      </div>
      basic
    </div>
    <div
      class="c7"
      role="presentation"
    >
      <div
        class="c1"
      >
        <div
          class="c8"
          role="status"
        >
          Border
        </div>
      </div>
      basic
    </div>
    <div
      class="c9"
      role="presentation"
    >
      <div
        class="c1"
      >
        <div
          class="c10"
          role="status"
        >
          Border
        </div>
      </div>
      basic
    </div>
    <div
      class="c11"
      role="presentation"
    >
      <div
        class="c1"
      >
        <div
          class="c12"
          role="status"
        >
          Border
        </div>
      </div>
      basic
    </div>
    <div
      class="c13"
      role="presentation"
    >
      <div
        class="c1"
      >
        <div
          class="c14"
          role="status"
        >
          Border
        </div>
      </div>
      basic
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Border Variants 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.2em;
  line-height: 1em;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0.5em 0.8em;
  border-radius: 1.5em;
  color: hsla(0,0%,98%,1);
  background-color: hsla(0,0%,25%,1);
}

.c0 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: dashed;
  border-width: 1px;
  border-color: hsla(0,0%,45%,1);
  border-radius: 0;
}

.c3 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: dotted;
  border-width: 1px;
  border-color: hsla(0,0%,45%,1);
  border-radius: 0;
}

.c4 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: double;
  border-width: 1px;
  border-color: hsla(0,0%,45%,1);
  border-radius: 0;
}

.c5 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: groove;
  border-width: 1px;
  border-color: hsla(0,0%,45%,1);
  border-radius: 0;
}

.c6 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: hidden;
  border-width: 1px;
  border-color: hsla(0,0%,45%,1);
  border-radius: 0;
}

.c7 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: ridge;
  border-width: 1px;
  border-color: hsla(0,0%,45%,1);
  border-radius: 0;
}

.c8 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(0,0%,45%,1);
  border-radius: 0;
}

.c1 {
  position: absolute;
  padding: 4px;
  background-color: hsla(216,56%,98%,1);
  top: 0;
  left: 0;
  -webkit-transform: translate(50%,calc(-px));
  -ms-transform: translate(50%,calc(-px));
  transform: translate(50%,calc(-px));
}

<body>
    <div>
      <div
        class="c0"
        role="presentation"
      >
        <div
          class="c1"
        >
          <div
            class="c2"
            role="status"
          >
            Border
          </div>
        </div>
        basic
      </div>
      <div
        class="c3"
        role="presentation"
      >
        <div
          class="c1"
        >
          <div
            class="c2"
            role="status"
          >
            Border
          </div>
        </div>
        basic
      </div>
      <div
        class="c4"
        role="presentation"
      >
        <div
          class="c1"
        >
          <div
            class="c2"
            role="status"
          >
            Border
          </div>
        </div>
        basic
      </div>
      <div
        class="c5"
        role="presentation"
      >
        <div
          class="c1"
        >
          <div
            class="c2"
            role="status"
          >
            Border
          </div>
        </div>
        basic
      </div>
      <div
        class="c6"
        role="presentation"
      >
        <div
          class="c1"
        >
          <div
            class="c2"
            role="status"
          >
            Border
          </div>
        </div>
        basic
      </div>
      <div
        class="c7"
        role="presentation"
      >
        <div
          class="c1"
        >
          <div
            class="c2"
            role="status"
          >
            Border
          </div>
        </div>
        basic
      </div>
      <div
        class="c8"
        role="presentation"
      >
        <div
          class="c1"
        >
          <div
            class="c2"
            role="status"
          >
            Border
          </div>
        </div>
        basic
      </div>
    </div>
  </body>,
  "container": .c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.2em;
  line-height: 1em;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0.5em 0.8em;
  border-radius: 1.5em;
  color: hsla(0,0%,98%,1);
  background-color: hsla(0,0%,25%,1);
}

.c0 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: dashed;
  border-width: 1px;
  border-color: hsla(0,0%,45%,1);
  border-radius: 0;
}

.c3 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: dotted;
  border-width: 1px;
  border-color: hsla(0,0%,45%,1);
  border-radius: 0;
}

.c4 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: double;
  border-width: 1px;
  border-color: hsla(0,0%,45%,1);
  border-radius: 0;
}

.c5 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: groove;
  border-width: 1px;
  border-color: hsla(0,0%,45%,1);
  border-radius: 0;
}

.c6 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: hidden;
  border-width: 1px;
  border-color: hsla(0,0%,45%,1);
  border-radius: 0;
}

.c7 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: ridge;
  border-width: 1px;
  border-color: hsla(0,0%,45%,1);
  border-radius: 0;
}

.c8 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(0,0%,45%,1);
  border-radius: 0;
}

.c1 {
  position: absolute;
  padding: 4px;
  background-color: hsla(216,56%,98%,1);
  top: 0;
  left: 0;
  -webkit-transform: translate(50%,calc(-px));
  -ms-transform: translate(50%,calc(-px));
  transform: translate(50%,calc(-px));
}

<div>
    <div
      class="c0"
      role="presentation"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
          role="status"
        >
          Border
        </div>
      </div>
      basic
    </div>
    <div
      class="c3"
      role="presentation"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
          role="status"
        >
          Border
        </div>
      </div>
      basic
    </div>
    <div
      class="c4"
      role="presentation"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
          role="status"
        >
          Border
        </div>
      </div>
      basic
    </div>
    <div
      class="c5"
      role="presentation"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
          role="status"
        >
          Border
        </div>
      </div>
      basic
    </div>
    <div
      class="c6"
      role="presentation"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
          role="status"
        >
          Border
        </div>
      </div>
      basic
    </div>
    <div
      class="c7"
      role="presentation"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
          role="status"
        >
          Border
        </div>
      </div>
      basic
    </div>
    <div
      class="c8"
      role="presentation"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
          role="status"
        >
          Border
        </div>
      </div>
      basic
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Border With content 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.2em;
  line-height: 1em;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0.5em 0.8em;
  border-radius: 1.5em;
  color: hsla(0,0%,98%,1);
  background-color: hsla(0,0%,25%,1);
}

.c0 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(0,0%,45%,1);
  border-radius: 0.5rem;
}

.c1 {
  position: absolute;
  padding: 4px;
  background-color: hsla(216,56%,98%,1);
  top: 0;
  left: 0;
  -webkit-transform: translate(50%,calc(-px));
  -ms-transform: translate(50%,calc(-px));
  transform: translate(50%,calc(-px));
}

<body>
    <div>
      <div
        class="c0"
        role="presentation"
      >
        <div
          class="c1"
        >
          <div
            class="c2"
            role="status"
          >
            Border
          </div>
        </div>
        basic
      </div>
    </div>
  </body>,
  "container": .c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.2em;
  line-height: 1em;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0.5em 0.8em;
  border-radius: 1.5em;
  color: hsla(0,0%,98%,1);
  background-color: hsla(0,0%,25%,1);
}

.c0 {
  position: relative;
  height: 15rem;
  width: 25rem;
  padding: 1rem;
  border-style: solid;
  border-width: 1px;
  border-color: hsla(0,0%,45%,1);
  border-radius: 0.5rem;
}

.c1 {
  position: absolute;
  padding: 4px;
  background-color: hsla(216,56%,98%,1);
  top: 0;
  left: 0;
  -webkit-transform: translate(50%,calc(-px));
  -ms-transform: translate(50%,calc(-px));
  transform: translate(50%,calc(-px));
}

<div>
    <div
      class="c0"
      role="presentation"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
          role="status"
        >
          Border
        </div>
      </div>
      basic
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
